--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
-title: Yourname's Homepage
-page-top-title: Yourname
-top-section-bg-text: Be what you wanna be
-home-subtitle: Yourname&ensp;|&ensp;上杉绘梨衣
-copyright-text: '&copy; Yourname 2023-2025. All Rights Reserved.'
+title: Voiresa's HCI Page
+page-top-title: Voiresa
+top-section-bg-text: University of Copenhagen
+home-subtitle: Voiresa&ensp;|&ensp;YichengFeng
+copyright-text: '&copy; Voiresa 2025-2026. All Rights Reserved.'
