--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
 title: Voiresa's HCI Page
 page-top-title: Voiresa
-top-section-bg-text: University of Copenhagen
-home-subtitle: Voiresa&ensp;|&ensp;YichengFeng
+top-section-bg-text: Voiresa's HCI Projects
+home-subtitle: Voiresa&ensp;|&ensp;University of Copenhagen
 copyright-text: '&copy; Voiresa 2025-2026. All Rights Reserved.'
